community/py3-augeas: upgrade to 1.1.0

--- a/community/py3-augeas/APKBUILD
+++ b/community/py3-augeas/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=py3-augeas
 _pkgname=python-augeas
-pkgver=1.0.3
-pkgrel=5
+pkgver=1.1.0
+pkgrel=0
 pkgdesc="Pure python bindings for augeas"
 url="https://pypi.python.org/pypi/python-augeas"
 arch="noarch"
@@ -29,7 +29,8 @@ check() {
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
+	rm -rf "$pkgdir"/usr/lib/python3*/site-packages/test
 }
 
-sha512sums="737b41e7bb438d80da75b55714c3f0b1706a4b2cacddd20fadf855bc3044e532f4079319b3775032e6f6009cf7f282af33fdf583332772b443a6c2d4925639fa  python-augeas-1.0.3.tar.gz
-938e1a28d70c8ffbf62fd2936a57276603487608fbb3e23bf3a59a4f655e7d875ad51e6506acbddf4eea27a433fe3c9c35da3e00be04c8c866a5a966cdf3b161  dlopen-libc-explicitly.patch"
+sha512sums="34e4e98219b9146ef843d94c2e854e951a9b7e81409e603e77e7defdbb8765c013a2c869a4f5db2244352ca35656e18667a0210dd24099cb3e4552a04b23aef8  python-augeas-1.1.0.tar.gz
+b345a2e060fbdfbcfa5206fb69998708ff56b98831318fa3b80569b6aeadf6e18d78e23ee8afa8db986e8b708550b2ec1d3e54c7c88887a4775d9ddff85c85a4  dlopen-libc-explicitly.patch"
