main/cloog: upgrade to 0.20.0

--- a/main/cloog/APKBUILD
+++ b/main/cloog/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=cloog
-pkgver=0.18.4
-pkgrel=2
+pkgver=0.20.0
+pkgrel=0
 pkgdesc="The Chunky Loop Generator"
 url="http://www.cloog.org/"
 arch="all"
@@ -11,12 +11,9 @@ depends_dev="gmp-dev isl-dev"
 makedepends_host="$depends_dev"
 makedepends="$makedepends_host"
 subpackages="$pkgname-dev"
-source="http://www.bastoul.net/cloog/pages/download/$pkgname-$pkgver.tar.gz"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://github.com/periscop/cloog/releases/download/cloog-$pkgver/cloog-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -30,9 +27,12 @@ build() {
 	make
 }
 
+check() {
+	make -j1 check
+}
+
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" INSTALL="install -D" install
 }
 
-sha512sums="d35d67b08ffe13c1a010b65bfe4dd02b0ae013d5b489e330dc950bd3514defca8f734bd37781856dcedf0491ff6122c34eecb4b0fe32a22d7e6bdadea98c8c23  cloog-0.18.4.tar.gz"
+sha512sums="d00cbefd348b45d9d482320a088f7ae736440046b99469cbdfbb177a38dcef182c3305f0a567a1f5699c23b7108db6fd5ad6dfbc071d63ccca1d6bfc1b198565  cloog-0.20.0.tar.gz"
