community/knotifications: enable notification sounds

--- a/community/knotifications/APKBUILD
+++ b/community/knotifications/APKBUILD
@@ -2,31 +2,24 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=knotifications
 pkgver=5.67.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Abstraction for system notifications"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
-depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev kwindowsystem-dev phonon-dev"
+depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev kwindowsystem-dev phonon-dev libcanberra-dev"
 makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev doxygen"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/knotifications-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 options="!check" # Fails due to requiring running dbus-daemon
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_QCH=ON
-	make
+	make -C build
 }
 
 check() {
@@ -35,7 +28,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 sha512sums="3ee74f84d8157142e943b348d12601ada8c5741026098abddd1433379753352b7f775d2382f02f7b1d8c8ef3387a3a23a3eecc80826718b5ff07946d5925e300  knotifications-5.67.0.tar.xz"
